--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
   "name": "dota2-skill-hero-trivia",
   "version": "0.1.0",
+  "private": true,
   "dependencies": {
     "react": "^15.5.4",
     "react-dom": "^15.5.4"
   },
   "devDependencies": {
     "eslint": "^3.19.0",
+    "gh-pages": "^1.0.0",
     "react-scripts": "1.0.7"
   },
+  "homepage": "http://dukemiller.github.io/dota2-skill-hero-trivia",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
